# xps-convert

./: .gitignore  README.md  pyproject.toml  test.py
examples/: example_for_igor.py  example_for_specs_xy.py
src/igor/: __init__.py  cursor.py  ibw.py  packed.py
src/xps_convert/: __init__.py  example_for_specs_xy.py  igor_to_kolxpd.py  main.py  specs_xy_to_kolxpd.py
src/xps_convert/test-files/: loop.xy
tests/: test_igor_ibw.py  test_igor_packed.py
tests/testdata/: 2025-03-12_TiO2_2.11.xy  Sample1-10002.pxt  Sample1-10005.pxt  Sample1-10026.pxt  Sample1-10070.pxt  analyzer_lens_mode.xy  export_with_scans.xy  group.xy  profiling.xy
